// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoggedOutForm should render 1`] = `
<div>
  <Connect(Localized(AuthFormHeader))
    authQuery={
      Object {
        "blogname": "Example Blog",
        "clientId": "98765",
        "from": "banner-44-slide-1-dashboard",
        "homeUrl": "http://an.example.site",
        "jpVersion": "5.4",
        "newUserStartedConnection": "2",
        "nonce": "fooBarNonce",
        "redirectAfterAuth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
        "redirectUri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
        "scope": "administrator:fooBarBaz",
        "secret": "fooBarSecret",
        "site": "http://an.example.site",
        "siteIcon": "",
        "siteUrl": "http://an.example.site",
        "tracksUi": "1239876546",
        "tracksUt": "wpcom:user_id",
        "userEmail": "email@an.example.site",
      }
    }
  />
  <Connect(Localized(SignupForm))
    disabled={false}
    email="email@an.example.site"
    footerLink={
      <LoggedOutFormLinks>
        <LoggedOutFormLinkItem
          href="https://wordpress.com/wp-login.php?redirect_to=https%3A%2F%2Fexample.com%2F&email_address=email%40an.example.site"
        >
          Already have an account? Sign in
        </LoggedOutFormLinkItem>
        <Localized(JetpackConnectHelpButton)
          onClick={[Function]}
        />
      </LoggedOutFormLinks>
    }
    redirectToAfterLoginUrl="https://example.com/"
    submitButtonText="Sign Up and Connect Jetpack"
    submitForm={[Function]}
    submitting={false}
    suggestedUsername=""
  />
</div>
`;

exports[`LoggedOutForm should render with locale suggestions 1`] = `
<div>
  <LocaleSuggestions
    locale="es"
    path="/jetpack/connect/authorize/es"
  />
  <Connect(Localized(AuthFormHeader))
    authQuery={
      Object {
        "blogname": "Example Blog",
        "clientId": "98765",
        "from": "banner-44-slide-1-dashboard",
        "homeUrl": "http://an.example.site",
        "jpVersion": "5.4",
        "newUserStartedConnection": "2",
        "nonce": "fooBarNonce",
        "redirectAfterAuth": "http://an.example.site/wp-admin/admin.php?page=jetpack",
        "redirectUri": "http://an.example.site/wp-admin/admin.php?page=jetpack&action=authorize&_wpnonce=fooBarNonce&redirect=http%3A%2F%2Fan.example.site%2Fwp-admin%2Fadmin.php%3Fpage%3Djetpack",
        "scope": "administrator:fooBarBaz",
        "secret": "fooBarSecret",
        "site": "http://an.example.site",
        "siteIcon": "",
        "siteUrl": "http://an.example.site",
        "tracksUi": "1239876546",
        "tracksUt": "wpcom:user_id",
        "userEmail": "email@an.example.site",
      }
    }
  />
  <Connect(Localized(SignupForm))
    disabled={false}
    email="email@an.example.site"
    footerLink={
      <LoggedOutFormLinks>
        <LoggedOutFormLinkItem
          href="https://wordpress.com/wp-login.php?redirect_to=https%3A%2F%2Fexample.com%2F&email_address=email%40an.example.site"
        >
          Already have an account? Sign in
        </LoggedOutFormLinkItem>
        <Localized(JetpackConnectHelpButton)
          onClick={[Function]}
        />
      </LoggedOutFormLinks>
    }
    redirectToAfterLoginUrl="https://example.com/"
    submitButtonText="Sign Up and Connect Jetpack"
    submitForm={[Function]}
    submitting={false}
    suggestedUsername=""
  />
</div>
`;
